perform platform checks before everything else

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,8 +40,12 @@ else()
   message (FATAL_ERROR "must use conan")
 endif()
 
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/)
+
 find_package(cmake_platform_detection REQUIRED)
 run_cmake_platform_detection()
+# NOTE: perform platform checks before everything else
+include(cmake/PlatformChecks)
 
 find_package(cmake_build_options REQUIRED)
 setup_default_build_type(RELEASE)
@@ -56,10 +60,6 @@ setup_cmake_build_options(RELEASE DEBUG)
 # else()
 #   message(FATAL_ERROR "not supported: using system provided chromium_build_util library")
 # endif()
-
-list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/)
-
-include(cmake/PlatformChecks)
 
 if(TARGET_EMSCRIPTEN)
   message(FATAL_ERROR "Prefer emscripten provided zlib with `-s USE_ZLIB=1`, see https://emscripten.org/docs/introducing_emscripten/release_notes.html?highlight=use_zlib")
